frontend/test/should_pass/retype_014.grg
using attrib_model_001;

rule r {
	-x:Edge->;

	alternative {
		First {
			modify {
				-y:EINT<x>->;
			}
		}
		Second {
			modify {
				-y:ESTRING<x>->;
			}
		}
	}

	modify {}
}
