frontend/test/should_fail/retype_022.grg
using attrib_model_001;

rule r {
	-x:Edge->;
	
	alternative {
		First {
			alternative {
				First_First {
					modify {
						-y:EINT<x>->;
					}
				}
				First_Second {
					modify {}
				}
			}

			modify {
				-y:EINT<x>->;
			}
		}
		Second {
			modify {}
		}
	}
	
	modify {}
}
